kubernetes/zulip_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zulip
      component: zulip
  template:
    metadata:
      labels:
        app: zulip
        component: zulip
    spec:
      containers:
      - name: zulip
        image: 10.110.0.3:5000/zulip/zulipv2:3.4
        resources:
          limits:
            cpu: 500m
            memory: 4Gi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zulip-data
