kubernetes/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zulip-nginx
  namespace: zulip
  labels:
    app: zulip
spec:
  spec:
  selector:
    app: zulip
    component: nginx
  ports:
  - port: 80
    targetPort: 80
