kubernetes/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zulip-redis
  namespace: zulip
  labels:
    app: zulip
spec:
  selector:
    app: zulip
    component: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
